# FoosballMotor

./: CMakeLists.txt  PID.h  README.md  communication.h  constants.h  encoder.h  error_checker.h  main.cpp  mainTestSpeed.cpp  main_save.txt  pid_settings.h  pwm.pio  secondCoreEntry.h  tusb_config.h  usb_descriptors.c
linear_movement/: encoder.h  linear_movement.h
rotation/: rotation.h  rotationEncoder.h  rotative_movement.h
system/: system.h
